--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-      <title>Calculator</title>
+      <title>Graphics Starter</title>
         <script src="script.js"></script>
   </head>
     <body>
